--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@callstack/react-theme-provider": "^3.0.5",
+    "@react-native-community/slider": "^4.5.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "color": "^3.1.2"
   },
