--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
     "@babel/core": "^7.9.0",
     "@babel/runtime": "^7.9.0",
     "@callstack/eslint-config": "^9.0.0",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
     "@release-it/conventional-changelog": "^1.1.4",
     "@types/color": "^3.0.1",
     "@types/node": "^13.13.5",
@@ -71,7 +69,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "commit-msg": "",
       "pre-commit": "yarn lint && yarn typescript"
     }
   },
